--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/three": "^0.129.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.130.0",
     "typescript": "^4.1.2"
   },
   "scripts": {
